# LESS_project

./: README.md
attacks/: readme
attacks/LEP/: cost.sage  improved_lep_find_subcodes.sage  test_monomial_recovery.sage
attacks/LEP_Beullens/: lep_find_subcodes.sage  subcodes_lex.sage  test_monomial_recovery.sage
attacks/PEP_Beullens/: list_sorting.sage  pep_find_codewords.sage  readme_PEP  test_permutation_recovery.sage
reference_implementation/: CMakeLists.txt  less_benchmark.c  less_test.c
reference_implementation/include/: LESS.h  aes256.h  codes.h  fq_arith.h  monomial_mat.h  parameters.h  rng.h  sha3.h  timing_and_stat.h  utils.h
reference_implementation/lib/: LESS.c  codes.c  fq_arith.c  monomial.c  rng.c  utils.c
